Fixing warnings.